lab3/ingress.yaml.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: webserver
  labels: 
    app: nginx 
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: nginx 
  template: 
    metadata: 
      labels: 
        app: nginx 
    spec: 
      containers: 
      - name: nginx 
        image: "ifilyaninitmo/itdt-contained-frontend:master" 
        ports: 
        - containerPort: 3000
