lab3/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: itcd-svc

spec:
  type: NodePort
  selector:
    app: itcd-frontend  
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 3000
      name: https-port
